--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 Traditional methods of analyzing timeseries images produced by 
 Function Magnetic Resonance 
-Imaging (FMRI) use regression techniques with very few degrees of freedom. 
+Imaging (FMRI) use regression techniques with only linear scaling parameters. 
 Though adding more degrees of freedom naturally mandates more computation,
 in this thesis I will discuss a Sequential Monte Carlo method of fitting a nonlinear
 model with seven degrees of freedom at 
@@ -62,15 +62,15 @@ derivation first described by \cite{Ogawa}.
 The seminal work by \cite{Buxton1998} attempted to explain the
 time evolution of the BOLD signal using a windkessel model to
 describe the local changes in Deoxygenated Hemoglobin content.
-Various papers made substantial improvements to this model until
-\cite{Buxton2004} brought all the changes together into a single complete 
+Incremental improvements were made to this model until
+\cite{Friston2000} brought all the changes together into a single complete 
 set of equations. And while there have been numerous adaptations in the model, 
 many of them summarized in \cite{Deneux2006}, even the basic versions
 have less bias error than the empirically driven \emph{Canonical Hemodynamic Model}
 \cite{Deneux2006}, \cite{Handwerker2004}.
-On the other hand many of the BOLD signal models have numbers
+On the other hand BOLD signal models have numbers
 of parameters ranging from seven \cite{Riera2004} to 50 \cite{Behzadi2005} 
-for a signal as short as 100 samples long. Clearly this number of parameters presents
+for a signal as short as 100 samples long. This number of parameters presents
 a significant risk of being under-determined and having high computation cost. 
 In this work, only the simplest physiologically inspired model will be
 used (with 7 parameters), and steps will be taken to make the most of computation
@@ -92,10 +92,9 @@ an active pumping process must move ions back into the
 axon. This process of recharging the axon requires extra energy, which temporarily
 increases the metabolic rate of oxygen. On a massive scale (cubic millimeter) 
 this activation/recharge process happens continuously. However, when a 
-particular region of the brain is very active, the action potentials
-occur significantly more often, resulting in significant local increase
-of the 
-Cerebral Metabolic Rate of Oxygen (CMRO2). Thus, blood vessels in a very 
+particular region of the brain is significantly active, the action potentials
+occur more often, resulting in a local increase of the 
+Cerebral Metabolic Rate of Oxygen (CMRO2). Thus, blood vessels in an
 active area will 
 tend to have less oxygenated hemoglobin (due to the increased rate at which
 oxygen is being consumed), and more deoxygenated hemoglobin,
@@ -110,7 +109,7 @@ that slowly settles out. It is this overcompensation that is the
 primary signal detected with FMRI imaging. This cascade of events
 is believed to consist of increased the local metabolism, 
 blood flow, blood volume, and oxygenated hemoglobin. The differences
-in onsets of these various effects is what causes the overcompensation
+in onsets of these effects is what causes the overcompensation
 that is observable in FMRI. Unfortunately, FMRI has no inherent unit
 of measurement, and thus signal levels are all relative: within a particular
 person, scanner and run. 
@@ -118,7 +117,7 @@ person, scanner and run.
 \section{FMRI}
 Magnetic Resonance Imaging, MRI, is a method of building 3D images
 non-invasively, based on the difference between nuclear spin
-relaxation times in various molecules. First, the subject 
+relaxation times in different molecules. First, the subject 
 is brought into a large magnetic field which causes nuclear spins
 to align. Radio Frequency (RF) signals may
 then be used to excite nuclear spin away from the base alignment. 
@@ -127,7 +126,8 @@ field, they emit detectable RF signals. Conveniently, the
 excitation of nuclear spins return their original state at different
 rates, called the T1 relaxation time, depending on the atoms excited.
 Additionally, the
-coherence of the spins also decay differently (and quite a bit faster
+coherence of the spins also decay differently (and roughly an order of 
+magnitude faster
 than T1 relaxation) based on the properties of the region.
 This gives two primary methods of contrasting substances,
 which form the basis of T1 and T2 weighted images. Additionally, 
@@ -140,7 +140,7 @@ In order to rapidly acquire entire brain images, as done in Functional
 MRI, a single large excitation pulse is applied to the entire brain,
 and the entire volume is acquired in a single T1 relaxation period. 
 Because the entire k-space (spatial-frequency) volume is acquired 
-from a single excitation, the signal-to-noise-ratio is very low
+from a single excitation, the signal-to-noise-ratio is low
 in this type of imaging (Echo Planar Imaging). 
 
 Increasing the spatial resolution of EPI imaging necessarily 
@@ -232,7 +232,8 @@ patient, and brain
 region ($E_0$, $r_0$), often the estimated values taken from \cite{Obata2004} are 
 taken as the constants $a_1 = k_1 + k_2 = 3.4$, and $a_2 = k_2+k_3 = 1$ in 
 studies using 1.5 Tesla scanners.
-While this model is very accurate, it is not perfect. 
+While this model is more accurate than the static Hemodynamic Model used in SPM,
+it is not perfect. 
 
 \section{Post Stimulus Undershoot}
 \label{sec:Post Stimulus Undershoot}
@@ -250,7 +251,7 @@ Recall
 that a lower than base signal means that there is an increased deoxyhemoglobin
 content in the voxel. The first and simplest explanation is that the post-stimulus
 undershoot is caused by a prolonged increase in CMRO2 after CBV and CBF
-have returned to their base levels. This theory is justified by quite a few
+have returned to their base levels. This theory is justified by 
 studies that show CBV and CBF returning to the baseline before the BOLD signal
 (\cite{Frahm2008}, \cite{Donahue2009}, \cite{Buxton2004}, \cite{Lu2004},
 \cite{Shen2008}). Unfortunately, because of limitations on FMRI and in vivo
@@ -264,7 +265,7 @@ by \cite{Yacoub2006}. \cite{Chen2009}
 makes a compelling case that most of the post stimulus undershoot can be 
 explained by combination of a prolonged CBV increase, and a prolonged CBF 
 undershoot, and that
-many of the previous measurements showing a quick recovery of CBV 
+the previous measurements showing a quick recovery of CBV 
 were in fact showing a return to baseline by arterial CBV.
 
 Regardless of the probability that CMRO2 and CBF are detached,
@@ -272,13 +273,13 @@ research into the post-stimulus undershoot has led to the creation
 of much more in depth models. In \cite{Zheng2002} additional state
 variables model oxygen transport, whereas \cite{Buxton2004} models
 CMR02 from a higher level, and somewhat more simply; though it 
-still adds several new parameters. \cite{Behzadi2005}
+still adds 9 new parameters. \cite{Behzadi2005}
 introduces nonlinearities into the CBF equations as a method to
 explain the post-stimulus undershoot, which falls in line with a 
 prolonged increase in CBF observed in \cite{Chen2009}. Similarly
 \cite{Zheng2005} adds additional compartments to model the BOLD signal
 that result from venous and arterial blood. 
-\cite{Deneux2006} compared these various models and though it did 
+\cite{Deneux2006} compared these models and though it did 
 not deal extensively with the 
 post-stimulus undershoot, it did show incremental improvements
 in quality from additional parameters (over the basic Balloon model);
@@ -286,26 +287,24 @@ though at the cost of greatly increased complexity.
 Importantly,\cite{Deneux2006} did show that by 
 simply adding viscoelastic terms from \cite{Buxton2004}, a slowed return 
 to baseline is possible to model, without greatly increasing
-complexity. Regardless, because of many of these models are extremely
-complex, and the benefits have yet to be proved, in this work the simple
-Balloon model will be used. Simplicity is even more important because
+complexity. Regardless, because these models are more 
+complex, and the parameters are not well characterized, in this work the simple
+Balloon model is used. Simplicity is even more important because
 it is the first time a particle filter has been used to calculate the
 BOLD parameters. Of course, future works could certainly benefit from
 the more advanced models, especially with the addition of viscoelastic
 effects.
 
-In summary, there have been extensive attempts to refine the Balloon,
-many of them extremely precise. However, the trade off 
-between increased complexity and increased flexibility is extremely 
-important. Given that the basic BOLD model has 7 parameters, for this
-work, where computation time is very important, that model is
-the best fit.
-
+In summary, there have been extensive refinements to the Balloon
+model,however, the increased complexity and lack of known priors 
+make these models less desirable. Therefor, in this work
+work, where computation time is especially important, only the 
+most basic model is used.
 
 \section{Properties of the BOLD Model}
 \label{sec:BOLD Analysis}
 Since the first complete BOLD model was proposed by \cite{Friston2002}, 
-several studies have endeavored to analyze properties of that model. 
+several studies have analyzed its properties. 
 The most important property is that the system is dissipative, and given
 enough time will converge to a constant value. This is found simply by
 analyzing the eigenvalues of the Jacobian of the state equations, 
@@ -338,8 +337,8 @@ There it was found that the parameters are far from perpendicular,
 implying that exact inference of parameters may not be possible without
 constraint. This could explain the extreme discrepencies in \autoref{tab:Params}.
 
-Several studies have been able to calculate distributions for the 
-Balloon parameters, those results are summarized in \autoref{tab:Params}
+A summary of results from previous studies of the Balloon Parameters
+are shown in \autoref{tab:Params}.
 
 %note to self, friston2002b's parameters are from a picture
 
